--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,15 +7,23 @@ description = "ISRC (International Standard Recording Code) parser library."
 repository = "https://github.com/contentstech-com/isrc-rs"
 license = "Apache-2.0 OR MIT"
 keywords = ["isrc", "parser"]
-categories = ["parsing"]
+categories = ["no-std", "no-std::no-alloc", "parsing"]
+
+[features]
+default = ["std"]
+
+std = ["alloc", "bitcode/std", "serde/std", "thiserror/std"]
+
+alloc = ["serde/alloc"]
 
 [dependencies]
-bitcode = "0.6"
+bitcode = { version = "0.6", default-features = false, features = ["derive"] }
 heapless = { version = "0.8.0", features = ["serde"] }
-serde = { version = "1", features = ["derive"] }
-thiserror = "2"
+serde = { version = "1", default-features = false, features = ["derive"] }
+thiserror = { version = "2", default-features = false }
 
 [dev-dependencies]
+anyhow = { version = "1.0.97", default-features = false }
 assert_matches = "1.5.0"
 bincode = "1.3.3"
 serde_json = "1.0.140"
