--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ categories = ["parsing"]
 
 [dependencies]
 bitcode = "0.6"
+heapless = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
 thiserror = "2"
 
