--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,19 +12,24 @@ categories = ["no-std", "no-std::no-alloc", "parsing"]
 [features]
 default = ["std"]
 
-std = ["alloc", "bitcode/std", "serde/std", "thiserror/std"]
+std = ["alloc", "bitcode?/std", "serde?/std", "thiserror/std"]
 
-alloc = ["serde/alloc"]
+alloc = ["serde?/alloc"]
+
+bitcode = ["dep:bitcode"]
+
+serde = ["dep:serde", "dep:heapless"]
 
 [dependencies]
-bitcode = { version = "0.6", default-features = false, features = ["derive"] }
-heapless = { version = "0.8.0", features = ["serde"] }
-serde = { version = "1", default-features = false, features = ["derive"] }
+bitcode = { version = "0.6", default-features = false, features = ["derive"], optional = true }
+heapless = { version = "0.8.0", features = ["serde"], optional = true }
+serde = { version = "1", default-features = false, features = ["derive"], optional = true }
 thiserror = { version = "2", default-features = false }
 
 [dev-dependencies]
 anyhow = { version = "1.0.97", default-features = false }
 assert_matches = "1.5.0"
 bincode = "1.3.3"
+heapless = { version = "0.8.0", default-features = false }
 serde_json = "1.0.140"
 toml = "0.8.20"
